# homework-10

./: .flake8  .gitignore  README.md  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_code.py  test_generators.py  test_log.py
