[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Dmitry Korobeinikov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
