[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Dimuil <korob-54@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
requests = "^2.32.3"
pytest = "^8.3.2"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
